added img and centered it

--- a/boophtml.html
+++ b/boophtml.html
@@ -13,7 +13,12 @@
 <header>
     <h1>DON'T CLICK THE BUTTON</h1>
     <h2>Seriously, you'll regret it!!!</h2>
+    <h3>do not press :O!!!!</h3>
 </header>
+
+<div class="center">
+    <img src="meanbutton-resized.png" alt="The button is no where to be found. You're safe, this time...">
+</div>
 
 
 <script src="boopjs.js"></script>
