added clicking functionality

--- a/boophtml.html
+++ b/boophtml.html
@@ -17,7 +17,9 @@
 </header>
 
 <div class="center">
-    <img src="meanbutton-resized.png" alt="The button is no where to be found. You're safe, this time...">
+    <button class="imagebutton" onclick="showGif(id)">
+    <img id="button" src="meanbutton-resized.png" alt="The button is no where to be found. You're safe, this time..." id="button-image">
+    </button>
 </div>
 
 
